Hibernate EHcache Test